comment delete complete

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -328,3 +328,9 @@
 ::placeholder {
     color: #ccc;
 }
+
+/*-------------Comments --------*/
+.comment:hover {
+    cursor: pointer;
+    color: red;
+}
